# currencies

./: docker-compose.yml  pyproject.toml
.dockerfiles/: Dockerfile  requirements.txt
.env/: .env.example
common/: models.py  tests.py
currencies/: celery.py  settings.py  urls.py
rates/: admin.py  apps.py  models.py  parser.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
rates/migrations/: 0001_initial.py  0002_initial.py  0003_alter_currency_charcode.py  0004_alter_trackedquote_unique_together.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
